examples/fault-injection/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule
spec:
  host: my-ws
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
